<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <!-- Logo and Title -->
    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/logoImageView"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/info" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/info"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Forgot Password Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/formCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/secondaryBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Back Button -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginBottom="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:onClick="onBackPressed"
                android:src="?attr/homeAsUpIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Forgot Password Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/forgot_password_description"
                android:textSize="16sp" />

            <!-- Email TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxWidth="500dp"
                    android:textColorHint="#546E7A"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Send Reset Link Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="3dp"
                android:onClick="onSendResetLinkClicked"
                android:paddingVertical="12dp"
                android:text="@string/send_reset_link"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
