<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.meddoc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_appointments"
            app:destination="@id/navigation_appointments" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_records"
            app:destination="@id/navigation_records" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.example.meddoc.ui.appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" >
        <action
            android:id="@+id/action_navigation_appointments_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_appointments_to_navigation_records"
            app:destination="@id/navigation_records" />
        <action
            android:id="@+id/action_navigation_appointments_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.example.meddoc.ui.records.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" >
        <action
            android:id="@+id/action_navigation_records_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_records_to_navigation_appointments"
            app:destination="@id/navigation_appointments" />
        <action
            android:id="@+id/action_navigation_records_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.meddoc.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_appointments"
            app:destination="@id/navigation_appointments" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_records"
            app:destination="@id/navigation_records" />
    </fragment>

</navigation>
